--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.3",
-    "telegraf": "^4.7.0"
+    "telegraf": "^4.7.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
